--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,22 @@
-<h1>Welcome to my page</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-sm"></div>
+    <div class="col-sm-8 col-md-10">
+      <div class="navbar-part mt-5">
+        <span>onur karadeniz</span>
+        <span>onurkaradeniz@gmail.com</span>
+      </div>
+      <div class="main-section">
+        <div class="row">
+          <div class="col-sm-8">
+             <i class="fas fa-map-marker-alt"></i>
+          </div>
+          <div class="col-sm-4">
+          <%= image_tag("onur.jpg") %>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm"></div>
+  </div>
+</div>
