--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,15 +4,27 @@
     <div class="col-sm-8 col-md-10">
       <div class="navbar-part mt-5">
         <span>onur karadeniz</span>
-        <span>onurkaradeniz@gmail.com</span>
+        <span>onurkaradeniz1@gmail.com</span>
       </div>
-      <div class="main-section">
+      <div class="main-section mt-5">
         <div class="row">
           <div class="col-sm-8">
-             <i class="fas fa-map-marker-alt"></i>
+            <i class="fas fa-map-marker-alt mb-4"></i>
+            <span>Amsterdam, NL</span>
+            <h1>
+              <span id="banner-typed-text"></span>
+            </h1>
+            <p class="short-info">Full Stack Junior Developer located in Amsterdam, NL.</p>
+            <a target="_blank" href="https://www.linkedin.com/in/onur-karadeniz-psm-i-87810233/">LinkedIn</a>
+            <i class="fab fa-linkedin"></i>
+            <a target="_blank" href="https://github.com/onurkaradeniz1">GitHub</a>
+            <i class="fab fa-github mb-3"></i>
+            <h3 class="mt-4">About Me</h3>
+            <p class="mb-4">My name is Onur Karadeniz and I am located in Amsterdam, NL. I have moved here and started Le Wagon Coding Bootcamp in Oct. 2021. I currently work at NMQ Digital but always eager to learn something new! Please reach out to me below from the contact info below.</p>
+            <h3 class="mt-4">Tech Knowledge</h3>
           </div>
           <div class="col-sm-4">
-          <%= image_tag("onur.jpg") %>
+            <%= image_tag "onur.jpg", width: 350, height: 350, class: "onur-img" %>
           </div>
         </div>
       </div>
