--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,8 +3,8 @@
     <div class="col-sm"></div>
     <div class="col-sm-8 col-md-10">
       <div class="navbar-part mt-5">
-        <span>onur karadeniz</span>
-        <span>onurkaradeniz1@gmail.com</span>
+        <span></span>
+        <span></span>
       </div>
       <div class="main-section mt-5">
         <div class="row">
@@ -21,10 +21,16 @@
             <i class="fab fa-github mb-3"></i>
             <h3 class="mt-4">About Me</h3>
             <p class="mb-4">My name is Onur Karadeniz and I am located in Amsterdam, NL. I have moved here and started Le Wagon Coding Bootcamp in Oct. 2021. I currently work at NMQ Digital but always eager to learn something new! Please reach out to me below from the contact info below.</p>
-            <h3 class="mt-4">Tech Knowledge</h3>
+            <h3 class="mt-5 mb-2">Tech Knowledge</h3>
+            <%= image_tag "html-5.png", width: 130, height: 130, class: "mt-4 img-tech" %>
+            <%= image_tag "css-3.png", width: 130, height: 130, class: "mt-4 img-tech" %>
+            <%= image_tag "js.png", width: 130, height: 130, class: "mt-4 img-tech" %>
+            <%= image_tag "ruby_new.png", width: 130, height: 130, class: "mt-4 img-tech" %>
+            <%= image_tag "github.png", width: 130, height: 130, class: "mt-4 img-tech" %>
+
           </div>
           <div class="col-sm-4">
-            <%= image_tag "onur.jpg", width: 350, height: 350, class: "onur-img" %>
+            <%= image_tag "onur.jpg", width: 375, height: 375, class: "onur-img" %>
           </div>
         </div>
       </div>
