--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,12 +1,29 @@
+html, body {
+  width: 100%;
+  height:100%;
+}
+
+body {
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+
 body {
   letter-spacing: 2px;
-  background: rgb(35, 36, 0);
-  background: linear-gradient(
-    90deg,
-    rgba(35, 36, 0, 1) 0%,
-    rgba(114, 9, 121, 0.7091211484593838) 5%,
-    rgba(0, 213, 255, 0.616) 50%
-  );
 }
 
 .navbar-part {
@@ -33,4 +50,8 @@ a:hover {
 
 .img-tech {
   padding-right: 8px;
+}
+
+.inp{
+  padding-bottom: 8px;
 }
