--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,11 +22,24 @@
             <h3 class="mt-4">About Me</h3>
             <p class="mb-4">My name is Onur Karadeniz and I am located in Amsterdam, NL. I have moved here and started Le Wagon Coding Bootcamp in Oct. 2021. I currently work at NMQ Digital but always eager to learn something new! Please reach out to me below from the contact info below.</p>
             <h3 class="mt-5 mb-2">Tech Knowledge</h3>
-            <%= image_tag "html-5.png", width: 130, height: 130, class: "mt-4 img-tech" %>
-            <%= image_tag "css-3.png", width: 130, height: 130, class: "mt-4 img-tech" %>
-            <%= image_tag "js.png", width: 130, height: 130, class: "mt-4 img-tech" %>
-            <%= image_tag "ruby_new.png", width: 130, height: 130, class: "mt-4 img-tech" %>
-            <%= image_tag "github.png", width: 130, height: 130, class: "mt-4 img-tech" %>
+            <div class="images">
+              <%= image_tag "html-5.png", width: 110, height: 110, class: "mt-4 img-tech" %>
+              <%= image_tag "css-3.png", width: 110, height: 110, class: "mt-4 img-tech" %>
+              <%= image_tag "js.png", width: 110, height: 110, class: "mt-4 img-tech" %>
+              <%= image_tag "ruby_new.png", width: 110, height: 110, class: "mt-4 img-tech" %>
+              <%= image_tag "github.png", width: 110, height: 110, class: "mt-4 img-tech" %>
+            </div>
+
+              <h3 class="mt-5 mb-2">Contact me</h3>
+              <form action="https://formcarry.com/s/wnHunL6STDg" method="POST" accept-charset="UTF-8" >
+                <div class="form-group inp"><input class="form-control" type="text" name="name" placeholder="Name"></div>
+                <div class="form-group inp"><input class="form-control" type="email" name="email" placeholder="Email"></div>
+                <div class="form-group inp">
+                  <textarea class="form-control" name="message" placeholder="Message" rows="5"></textarea>
+                </div>
+                <div class="form-group mb-5 sbt-btn"><button class="btn btn-outline-primary w-100" type="submit">Submit</button></div>
+                <input type="hidden" name="_gotcha">
+              </form>
 
           </div>
           <div class="col-sm-4">
