--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,7 +20,7 @@
             <a target="_blank" href="https://github.com/onurkaradeniz1">GitHub</a>
             <i class="fab fa-github mb-3"></i>
             <h3 class="mt-4">About Me</h3>
-            <p class="mb-4">My name is Onur Karadeniz and I am located in Amsterdam, NL. I have moved here and started Le Wagon Coding Bootcamp in Oct. 2021. I currently work at NMQ Digital but always eager to learn something new! Please reach out to me below from the contact info below.</p>
+            <p class="mb-4">My name is Onur Karadeniz and I am located in Amsterdam, NL. I have moved here and started Le Wagon Coding Bootcamp in Oct. 2021. I currently work at NMQ Digital but always eager to learn something new! Please reach out to me below from the contact info.</p>
             <h3 class="mt-5 mb-2">Tech Knowledge</h3>
             <div class="images" data-aos="flip-up">
               <%= image_tag "html-5.png", width: 110, height: 110, class: "mt-4 img-tech" %>
